Google Sheets API 추가

--- a/190413_GoogleDrive_JunHyeong/using_google_drive.ipynb
+++ b/190413_GoogleDrive_JunHyeong/using_google_drive.ipynb
@@ -203,7 +203,7 @@
       "\n",
       "##### nextPageToken #####\n",
       "\n",
-      "~!!~AI9FV7T59la2smTVqJH4x-lqS0AOLqo5pY4tXG1PeRuKQMceOMFKU4LIxZfkBLIcyfxYMlxFjDReagWwhI_VYeP45ecbwGYk2IK7r7hPl92FXUDDMORy69ThlelKNRDIkB4vP01xcRPT2bZivEjptPvjHiESTHXfzkh5z4BaW3jzP1gafAdvA-hQVOjbuDlw433ZcY4QugsNR3AWvcfuhMX7AOmYjDKacZGXljQHdkj0_jeeSoLwph7JVKA1cLajBX43FYoUqQwXBZRJYdYi5I2hRDY8HLMCoLsDhtRrh9oLSaw-jPjGP3Uk3Nx4VaIm6str8hOshYYBrfTrAaMnO9O7ZdgD__zn-HXT8ZoVl25D1rztlnZr09Y=\n",
+      "~!!~AI9FV7T59la2smTVqJH4x-lqS0AOLqo5pY4tXG1PeRuKQMceOMFKU4LIxZfkBLIcyfxYMlxFjDReagWwhI_VYeP45ecbwGYk2IK7r7hPl92FXUDDMORy69ThlelKNRDIkB4vP01xcRPT2bZivEjptPvjHiESTHXfzkh5z4BaW3jzP1gafAdvA-hQVOjbuDlw433ZcY4QugsNR3AWvcfuhMX7AOmYjDKacZGXljQHdkj0_jeeSoLwph7JVKA1cLajBX43FYoUqQwXBZRJYdYi5I2hRDY8UYDGvYwGI4UDToAxLcXz1pwzNA9McAAuWF-V405MBgIpetQabTWeQTmC7jG0v7x1UVGnIByb0aL22bt6YXMvki5oJp0=\n",
       "\n",
       "##### List of Metadata #####\n",
       "\n",
@@ -441,7 +441,7 @@
       "\n",
       "##### Upload Result #####\n",
       "\n",
-      "{'kind': 'drive#file', 'id': '1hqAGzBqbVO7KUq0G_pEttf3lcTUumH2n', 'name': 'file_up_test.txt', 'mimeType': 'text/plain'}\n"
+      "{'kind': 'drive#file', 'id': '1xE5dKMXFtKnENag_8Djwm1SJgYSybVuv', 'name': 'file_up_test.txt', 'mimeType': 'text/plain'}\n"
      ]
     }
    ],
@@ -483,7 +483,7 @@
       "\n",
       "##### Upload Result #####\n",
       "\n",
-      "{'kind': 'drive#file', 'id': '1OGZdTP_YXn0hpuvatX925YwH47kW97x3', 'name': 'mem_up_test.txt', 'mimeType': 'text/plain'}\n"
+      "{'kind': 'drive#file', 'id': '1tgEKopZgMpdwM36rqQ3raMditnzR-FDS', 'name': 'mem_up_test.txt', 'mimeType': 'text/plain'}\n"
      ]
     }
    ],
@@ -530,7 +530,7 @@
       "\n",
       "##### Upload Result #####\n",
       "\n",
-      "{'kind': 'drive#file', 'id': '1OGZdTP_YXn0hpuvatX925YwH47kW97x3', 'name': 'mem_up_test2.txt', 'mimeType': 'text/plain'}\n"
+      "{'kind': 'drive#file', 'id': '1tgEKopZgMpdwM36rqQ3raMditnzR-FDS', 'name': 'mem_up_test2.txt', 'mimeType': 'text/plain'}\n"
      ]
     }
    ],
@@ -752,7 +752,10 @@
       "\n",
       "##### Upload Result #####\n",
       "\n",
-      "{'kind': 'drive#file', 'id': '1SAfHB0m6iNukqKnqZK8-uRojA1Qxc7C6h1WzcSwZ_s0', 'name': 'codetbl_20190410', 'mimeType': 'application/vnd.google-apps.spreadsheet'}\n"
+      "{'id': '1W9TQuYKYNBQIHa19PfdIEtzTU7W6iOusG17gZElNMOw',\n",
+      " 'kind': 'drive#file',\n",
+      " 'mimeType': 'application/vnd.google-apps.spreadsheet',\n",
+      " 'name': 'codetbl_20190411'}\n"
      ]
     }
    ],
@@ -771,7 +774,7 @@
     "response = drive_service.files().create(body=meta_data).execute()\n",
     "\n",
     "print(\"\\n\\n##### Upload Result #####\\n\")\n",
-    "print(response)"
+    "pprint.pprint(response)"
    ]
   },
   {
@@ -786,7 +789,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -800,7 +803,15 @@
       "0  KR7005930003  A005930       삼성전자\n",
       "1  KR7046890000  A046890      서울반도체\n",
       "2  KR7069500007  A069500  KODEX 200\n",
-      "3  KR7114800006  A114800  KODEX 인버스\n"
+      "3  KR7114800006  A114800  KODEX 인버스\n",
+      "\n",
+      "##### Update Result #####\n",
+      "\n",
+      "{'spreadsheetId': '1W9TQuYKYNBQIHa19PfdIEtzTU7W6iOusG17gZElNMOw',\n",
+      " 'updatedCells': 15,\n",
+      " 'updatedColumns': 3,\n",
+      " 'updatedRange': \"'시트1'!A1:C5\",\n",
+      " 'updatedRows': 5}\n"
      ]
     }
    ],
@@ -813,19 +824,70 @@
     "print(\"\\n##### Raw Data #####\\n\")\n",
     "print(df)\n",
     "\n",
-    "# TODO\n",
-    "# TODO\n",
-    "# TODO\n",
-    "spreadsheet_obj.values().update(spreadsheetId=SPREAD_SHEET_ID, range=\"시트1!A1:D3\")"
+    "input_values = [list(df)]\n",
+    "input_values.extend(df.values.tolist())\n",
+    "\n",
+    "body_data = {\n",
+    "    \"values\": input_values\n",
+    "}\n",
+    "\n",
+    "response = spreadsheet_obj.values().update(\n",
+    "    spreadsheetId=SPREAD_SHEET_ID, \n",
+    "    range=\"시트1!A1:C5\", \n",
+    "    body=body_data, \n",
+    "    valueInputOption=\"RAW\"  # \"RAW\" or \"USER_ENTERED\"\n",
+    ").execute()\n",
+    "\n",
+    "print(\"\\n##### Update Result #####\\n\")\n",
+    "pprint.pprint(response)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 3.4.3. Append\n",
+    "***"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "##### Append Result #####\n",
+      "\n",
+      "{'spreadsheetId': '1W9TQuYKYNBQIHa19PfdIEtzTU7W6iOusG17gZElNMOw',\n",
+      " 'updates': {'spreadsheetId': '1W9TQuYKYNBQIHa19PfdIEtzTU7W6iOusG17gZElNMOw',\n",
+      "             'updatedCells': 6,\n",
+      "             'updatedColumns': 3,\n",
+      "             'updatedRange': \"'시트1'!A6:C7\",\n",
+      "             'updatedRows': 2}}\n"
+     ]
+    }
+   ],
    "source": [
-    "FILE_ID = response[\"spreadsheetId\"]"
+    "body_data = {\n",
+    "    \"values\": [\n",
+    "        [\"KR7035720002\", \"A035720\", \"카카오\"],\n",
+    "        [\"KR7084990001\", \"A084990\", \"바이로메드\"]\n",
+    "    ]\n",
+    "}\n",
+    "\n",
+    "response = spreadsheet_obj.values().append(\n",
+    "    spreadsheetId=SPREAD_SHEET_ID,\n",
+    "    range=\"시트1!A6:C6\",\n",
+    "    body=body_data,\n",
+    "    valueInputOption=\"RAW\",  # \"RAW\" or \"USER_ENTERED\"\n",
+    ").execute()\n",
+    "\n",
+    "print(\"\\n##### Append Result #####\\n\")\n",
+    "pprint.pprint(response)"
    ]
   },
   {
@@ -850,11 +912,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {
     "scrolled": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "##### Raw Data #####\n",
+      "\n",
+      "       date   open   high    low  close       vol\n",
+      "0  20190222  46500  47150  46450  47150   6895772\n",
+      "1  20190225  47400  47550  47050  47350   7484716\n",
+      "2  20190226  47350  47450  46500  46750   7985547\n",
+      "3  20190227  47000  47250  46750  46750   8045211\n",
+      "4  20190228  46400  46500  45100  45100  23569321\n",
+      "\n",
+      "##### Binary Data #####\n",
+      "\n",
+      "b'\\x0e\\x144\\x01\\xa4\\xb5\\x00\\x00.\\xb8\\x00\\x00r\\xb5\\x00\\x00.\\xb8\\x00\\x00\\x9c8i\\x00\\x11\\x144\\x01(\\xb9\\x00\\x00\\xbe\\xb9\\x00\\x00\\xca\\xb7\\x00\\x00\\xf6\\xb8\\x00\\x00,5r\\x00\\x12\\x144\\x01\\xf6\\xb8\\x00\\x00Z\\xb9\\x00\\x00\\xa4\\xb5\\x00\\x00\\x9e\\xb6\\x00\\x00\\x8b\\xd9y\\x00\\x13\\x144\\x01\\x98\\xb7\\x00\\x00\\x92\\xb8\\x00\\x00\\x9e\\xb6\\x00\\x00\\x9e\\xb6\\x00\\x00\\x9b\\xc2z\\x00\\x14\\x144\\x01@\\xb5\\x00\\x00\\xa4\\xb5\\x00\\x00,\\xb0\\x00\\x00,\\xb0\\x00\\x00\\xa9\\xa3g\\x01'\n",
+      "\n",
+      "##### Length of Binary Data #####\n",
+      "\n",
+      "120\n",
+      "\n",
+      "\n",
+      "##### Upload Result #####\n",
+      "\n",
+      "{'id': '1EE8Oj6jgnjwxykRmtk_Paf58lILo-u-N',\n",
+      " 'kind': 'drive#file',\n",
+      " 'mimeType': 'application/octet-stream',\n",
+      " 'name': 'day_005930.bry'}\n"
+     ]
+    }
+   ],
    "source": [
     "import struct\n",
     "\n",
@@ -887,7 +981,7 @@
     ").execute()\n",
     "\n",
     "print(\"\\n\\n##### Upload Result #####\\n\")\n",
-    "print(response)"
+    "pprint.pprint(response)"
    ]
   },
   {
@@ -900,9 +994,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "##### Download Start #####\n",
+      "\n",
+      "b'\\x0e\\x144\\x01\\xa4\\xb5\\x00\\x00.\\xb8\\x00\\x00r\\xb5\\x00\\x00.\\xb8\\x00\\x00\\x9c8i\\x00'\n",
+      "(20190222, 46500, 47150, 46450, 47150, 6895772)\n",
+      "Download 20%\n",
+      "\n",
+      "b'\\x11\\x144\\x01(\\xb9\\x00\\x00\\xbe\\xb9\\x00\\x00\\xca\\xb7\\x00\\x00\\xf6\\xb8\\x00\\x00,5r\\x00'\n",
+      "(20190225, 47400, 47550, 47050, 47350, 7484716)\n",
+      "Download 40%\n",
+      "\n",
+      "b'\\x12\\x144\\x01\\xf6\\xb8\\x00\\x00Z\\xb9\\x00\\x00\\xa4\\xb5\\x00\\x00\\x9e\\xb6\\x00\\x00\\x8b\\xd9y\\x00'\n",
+      "(20190226, 47350, 47450, 46500, 46750, 7985547)\n",
+      "Download 60%\n",
+      "\n",
+      "b'\\x13\\x144\\x01\\x98\\xb7\\x00\\x00\\x92\\xb8\\x00\\x00\\x9e\\xb6\\x00\\x00\\x9e\\xb6\\x00\\x00\\x9b\\xc2z\\x00'\n",
+      "(20190227, 47000, 47250, 46750, 46750, 8045211)\n",
+      "Download 80%\n",
+      "\n",
+      "b'\\x14\\x144\\x01@\\xb5\\x00\\x00\\xa4\\xb5\\x00\\x00,\\xb0\\x00\\x00,\\xb0\\x00\\x00\\xa9\\xa3g\\x01'\n",
+      "(20190228, 46400, 46500, 45100, 45100, 23569321)\n",
+      "Download 100%\n",
+      "\n",
+      "##### Done #####\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "FILE_ID = response[\"id\"]  # 다운로드 받을 파일의 ID\n",
     "CHUNK_SIZE = 24\n",
