중간저장(안돌아감)

--- a/190413_GoogleDrive_JunHyeong/using_google_drive.ipynb
+++ b/190413_GoogleDrive_JunHyeong/using_google_drive.ipynb
@@ -203,7 +203,7 @@
       "\n",
       "##### nextPageToken #####\n",
       "\n",
-      "~!!~AI9FV7T59la2smTVqJH4x-lqS0AOLqo5pY4tXG1PeRuKQMceOMFKU4LIxZfkBLIcyfxYMlxFjDReagWwhI_VYeP45ecbwGYk2IK7r7hPl92FXUDDMORy69ThlelKNRDIkB4vP01xcRPT2bZivEjptPvjHiESTHXfzkh5z4BaW3jzP1gafAdvA-hQVOjbuDlw433ZcY4QugsNR3AWvcfuhMX7AOmYjDKacZGXljQHdkj0_jeeSoLwph7JVKA1cLajBX43FYoUqQwXBZRJYdYi5I2hRDY8UYDGvYwGI4UDToAxLcXz1pwzNA9McAAuWF-V405MBgIpetQabTWeQTmC7jG0v7x1UVGnIByb0aL22bt6YXMvki5oJp0=\n",
+      "~!!~AI9FV7T59la2smTVqJH4x-lqS0AOLqo5pY4tXG1PeRuKQMceOMFKU4LIxZfkBLIcyfxYMlxFjDReagWwhI_VYeP45ecbwGYk2IK7r7hPl92FXUDDMORy69ThlelKNRDIkB4vP01xcRPT2bZivEjptPvjHiESTHXfzkh5z4BaW3jzP1gafAdvA-hQVOjbuDlw433ZcY4QugsNR3AWvcfuhMX7AOmYjDKacZGXljQHdkj0_jeeSk_9KhSH3plyIVVky3muxeqmviq-nkCbDt3pmwYUuc6uj124MhsH5pPQ50P0G8wEOFg4TXVyjMAUVikiCvppmaNSkpW1afBjAvJU-Nw7VsxvB3frBzLrGnFNY20Wvfbg5r-cP0c=\n",
       "\n",
       "##### List of Metadata #####\n",
       "\n",
@@ -441,7 +441,7 @@
       "\n",
       "##### Upload Result #####\n",
       "\n",
-      "{'kind': 'drive#file', 'id': '1xE5dKMXFtKnENag_8Djwm1SJgYSybVuv', 'name': 'file_up_test.txt', 'mimeType': 'text/plain'}\n"
+      "{'kind': 'drive#file', 'id': '1lC_RM_zaTacPnrJw0jfhTfMZA6fVbbY5', 'name': 'file_up_test.txt', 'mimeType': 'text/plain'}\n"
      ]
     }
    ],
@@ -483,7 +483,7 @@
       "\n",
       "##### Upload Result #####\n",
       "\n",
-      "{'kind': 'drive#file', 'id': '1tgEKopZgMpdwM36rqQ3raMditnzR-FDS', 'name': 'mem_up_test.txt', 'mimeType': 'text/plain'}\n"
+      "{'kind': 'drive#file', 'id': '1YhFOAmmQllAI1kS3eHd0RkqwA4yEFb4T', 'name': 'mem_up_test.txt', 'mimeType': 'text/plain'}\n"
      ]
     }
    ],
@@ -530,7 +530,7 @@
       "\n",
       "##### Upload Result #####\n",
       "\n",
-      "{'kind': 'drive#file', 'id': '1tgEKopZgMpdwM36rqQ3raMditnzR-FDS', 'name': 'mem_up_test2.txt', 'mimeType': 'text/plain'}\n"
+      "{'kind': 'drive#file', 'id': '1YhFOAmmQllAI1kS3eHd0RkqwA4yEFb4T', 'name': 'mem_up_test2.txt', 'mimeType': 'text/plain'}\n"
      ]
     }
    ],
@@ -635,7 +635,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -694,28 +694,114 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "\n",
+      "##### Range A:D #####\n",
+      "\n",
       "{'majorDimension': 'ROWS',\n",
-      " 'range': \"'시트1'!A1:D3\",\n",
-      " 'values': [['', '사과', '딸기', '바나나'],\n",
-      "            ['수량', '2', '10', '3'],\n",
-      "            ['가격', '10000', '5000', '3000']]}\n"
+      " 'range': \"'시트1'!A1:D1000\",\n",
+      " 'values': [['market', 'fullcode', 'shtcode', 'name'],\n",
+      "            ['kospi', 'KR7024890006', 'A024890', '대원화성'],\n",
+      "            ['kospi', 'KR7024900003', 'A024900', '덕양산업'],\n",
+      "            ['kosdaq', 'KR7024910002', 'A024910', '경창산업'],\n",
+      "            ['kosdaq', 'KR7024940009', 'A024940', 'PN풍년'],\n",
+      "            ['kosdaq', 'KR7024950008', 'A024950', '삼천리자전거'],\n",
+      "            ['kospi', 'KR7025000001', 'A025000', 'KPX케미칼'],\n",
+      "            ['kosdaq', 'KR7025320003', 'A025320', '시노펙스'],\n",
+      "            ['kosdaq', 'KR7025440009', 'A025440', '대성엘텍'],\n",
+      "            ['kospi', 'KR7025530007', 'A025530', 'SJM홀딩스'],\n",
+      "            ['kospi', 'KR7025540006', 'A025540', '한국단자'],\n",
+      "            ['kosdaq', 'KR7025550005', 'A025550', '한국선재'],\n",
+      "            ['kospi', 'KR7025560004', 'A025560', '미래산업'],\n",
+      "            ['kospi', 'KR7025750001', 'A025750', '한솔홈데코'],\n",
+      "            ['kosdaq', 'KR7025770009', 'A025770', '한국정보통신'],\n",
+      "            ['kospi', 'KR7025820002', 'A025820', '이구산업'],\n",
+      "            ['kospi', 'KR7025860008', 'A025860', '남해화학'],\n",
+      "            ['kosdaq', 'KR7025870007', 'A025870', '신라에스지'],\n",
+      "            ['kosdaq', 'KR7025880006', 'A025880', '케이씨피드'],\n",
+      "            ['kospi', 'KR7025890005', 'A025890', '한국주강'],\n",
+      "            ['kosdaq', 'KR7025900002', 'A025900', '동화기업'],\n",
+      "            ['kosdaq', 'KR7025950007', 'A025950', '동신건설'],\n",
+      "            ['kosdaq', 'KR7025980004', 'A025980', '아난티'],\n",
+      "            ['kosdaq', 'KR7026040006', 'A026040', '제이에스티나'],\n",
+      "            ['kosdaq', 'KR7026150003', 'A026150', '특수건설'],\n",
+      "            ['kosdaq', 'KR7026180000', 'A026180', '현대정보기술'],\n",
+      "            ['kospi', 'KR7026890004', 'A026890', '디피씨'],\n",
+      "            ['kosdaq', 'KR7026910000', 'A026910', '광진실업'],\n",
+      "            ['kospi', 'KR7026940007', 'A026940', '부국철강'],\n",
+      "            ['kospi', 'KR7026960005', 'A026960', '동서'],\n",
+      "            ['kosdaq', 'KR7027040005', 'A027040', '서울전자통신'],\n",
+      "            ['kosdaq', 'KR7027050004', 'A027050', '코리아나'],\n",
+      "            ['kosdaq', 'KR7027360007', 'A027360', '아주IB투자'],\n",
+      "            ['kospi', 'KR7027410000', 'A027410', 'BGF'],\n",
+      "            ['kosdaq', 'KR7027580000', 'A027580', '상보'],\n",
+      "            ['kosdaq', 'KR7027710003', 'A027710', '팜스토리'],\n",
+      "            ['kospi', 'KR7027740000', 'A027740', '마니커'],\n",
+      "            ['kosdaq', 'KR7027830009', 'A027830', '대성창투'],\n",
+      "            ['kospi', 'KR7027970003', 'A027970', '세하']]}\n",
+      "\n",
+      "##### Range A5:D8 #####\n",
+      "\n",
+      "{'spreadsheetId': '1PH9fjNRyKd0IqBiaZ3cDGhysmP3Y2241CHCEdt2nQrc',\n",
+      " 'valueRanges': [{'majorDimension': 'ROWS',\n",
+      "                  'range': \"'시트1'!A1:D1\",\n",
+      "                  'values': [['market', 'fullcode', 'shtcode', 'name']]},\n",
+      "                 {'majorDimension': 'ROWS',\n",
+      "                  'range': \"'시트1'!A5:D8\",\n",
+      "                  'values': [['kosdaq', 'KR7024940009', 'A024940', 'PN풍년'],\n",
+      "                             ['kosdaq', 'KR7024950008', 'A024950', '삼천리자전거'],\n",
+      "                             ['kospi', 'KR7025000001', 'A025000', 'KPX케미칼'],\n",
+      "                             ['kosdaq', 'KR7025320003', 'A025320', '시노펙스']]}]}\n"
      ]
     }
    ],
    "source": [
     "SPREAD_SHEET_ID = \"1PH9fjNRyKd0IqBiaZ3cDGhysmP3Y2241CHCEdt2nQrc\"\n",
     "SHEET_NAME = response[\"sheets\"][0][\"properties\"][\"title\"]\n",
-    "RANGE = \"{0}!A1:D3\".format(SHEET_NAME)\n",
+    "\n",
+    "rng = \"{0}!A:D\".format(SHEET_NAME)\n",
+    "spreadsheet_obj = sheets_service.spreadsheets()\n",
+    "response = spreadsheet_obj.values().get(spreadsheetId=SPREAD_SHEET_ID, range=rng).execute()\n",
+    "print(\"\\n##### Range A:D #####\\n\")\n",
+    "pprint.pprint(response)\n",
+    "\n",
+    "rng = [\n",
+    "    \"{0}!A1:D1\".format(SHEET_NAME),\n",
+    "    \"{0}!A5:D8\".format(SHEET_NAME),\n",
+    "]\n",
+    "spreadsheet_obj = sheets_service.spreadsheets()\n",
+    "response = spreadsheet_obj.values().batchGet(spreadsheetId=SPREAD_SHEET_ID, ranges=rng).execute()\n",
+    "print(\"\\n##### Range A1:D1 And A5:D8 #####\\n\")\n",
+    "pprint.pprint(response)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 3.3.3. 필터를 사용하여 읽기\n",
+    "***"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "body = {\n",
+    "    \"request\": \n",
+    "}\n",
     "\n",
     "spreadsheet_obj = sheets_service.spreadsheets()\n",
-    "response = spreadsheet_obj.values().get(spreadsheetId=SPREAD_SHEET_ID, range=RANGE).execute()\n",
+    "response = spreadsheet_obj.values().batchGetByDataFilter(spreadsheetId=SPREAD_SHEET_ID, body=).execute()\n",
+    "print(\"\\n##### Range A:D #####\\n\")\n",
     "pprint.pprint(response)"
    ]
   },
@@ -752,7 +838,7 @@
       "\n",
       "##### Upload Result #####\n",
       "\n",
-      "{'id': '1W9TQuYKYNBQIHa19PfdIEtzTU7W6iOusG17gZElNMOw',\n",
+      "{'id': '1aUKYggNOv8ZpB0yJDeEvfnYv8MbY1HH55nDVIffV5bM',\n",
       " 'kind': 'drive#file',\n",
       " 'mimeType': 'application/vnd.google-apps.spreadsheet',\n",
       " 'name': 'codetbl_20190411'}\n"
@@ -807,7 +893,7 @@
       "\n",
       "##### Update Result #####\n",
       "\n",
-      "{'spreadsheetId': '1W9TQuYKYNBQIHa19PfdIEtzTU7W6iOusG17gZElNMOw',\n",
+      "{'spreadsheetId': '1aUKYggNOv8ZpB0yJDeEvfnYv8MbY1HH55nDVIffV5bM',\n",
       " 'updatedCells': 15,\n",
       " 'updatedColumns': 3,\n",
       " 'updatedRange': \"'시트1'!A1:C5\",\n",
@@ -862,8 +948,8 @@
       "\n",
       "##### Append Result #####\n",
       "\n",
-      "{'spreadsheetId': '1W9TQuYKYNBQIHa19PfdIEtzTU7W6iOusG17gZElNMOw',\n",
-      " 'updates': {'spreadsheetId': '1W9TQuYKYNBQIHa19PfdIEtzTU7W6iOusG17gZElNMOw',\n",
+      "{'spreadsheetId': '1aUKYggNOv8ZpB0yJDeEvfnYv8MbY1HH55nDVIffV5bM',\n",
+      " 'updates': {'spreadsheetId': '1aUKYggNOv8ZpB0yJDeEvfnYv8MbY1HH55nDVIffV5bM',\n",
       "             'updatedCells': 6,\n",
       "             'updatedColumns': 3,\n",
       "             'updatedRange': \"'시트1'!A6:C7\",\n",
@@ -942,7 +1028,7 @@
       "\n",
       "##### Upload Result #####\n",
       "\n",
-      "{'id': '1EE8Oj6jgnjwxykRmtk_Paf58lILo-u-N',\n",
+      "{'id': '1yaY4dSBdNO_LgWjyTSMAWT4qtBUXycKd',\n",
       " 'kind': 'drive#file',\n",
       " 'mimeType': 'application/octet-stream',\n",
       " 'name': 'day_005930.bry'}\n"
