--- a/190413_GoogleDrive_JunHyeong/google_drive_tutorial.ipynb
+++ b/190413_GoogleDrive_JunHyeong/google_drive_tutorial.ipynb
@@ -26,6 +26,9 @@
     "# 1. Google Drive API 사용설정\n",
     "***\n",
     "\n",
+    "- Drive REST API reference documentation: <https://developers.google.com/drive/api/v3/reference/>\n",
+    "- Drive API PyDoc documentation: <https://developers.google.com/resources/api-libraries/documentation/drive/v3/python/latest/>\n",
+    "\n",
     "\n",
     "## 1.1. 프로젝트 선택 또는 새 프로젝트 생성\n",
     "***\n",
@@ -51,13 +54,13 @@
     "## 1.4. 사용자 인증 정보 생성\n",
     "***\n",
     "\n",
+    "OAuth 클라이언트 ID로 생성을 한다.\n",
+    "\n",
     "![사용자 인증 정보 생성](https://raw.githubusercontent.com/3x3x3/MediaFiles/master/google_drive/mk_oauth_key.gif)\n",
     "\n",
     "\n",
     "## 1.5. 공통적으로 사용하는 코드\n",
-    "***\n",
-    "\n",
-    "build()로 리턴되는 drive_service는 <https://developers.google.com/resources/api-libraries/documentation/drive/v3/python/latest>를 참조한다."
+    "***"
    ]
   },
   {
@@ -104,9 +107,7 @@
     "        creds = flow.run_local_server()\n",
     "    # Save the credentials for the next run\n",
     "    with open(TOKEN_FILE_NAME, \"wb\") as token:\n",
-    "        pickle.dump(creds, token)\n",
-    "\n",
-    "drive_service = build(\"drive\", \"v3\", credentials=creds)"
+    "        pickle.dump(creds, token)"
    ]
   },
   {
@@ -117,30 +118,53 @@
     "***\n",
     "\n",
     "\n",
-    "## 2.1. 드라이브 정보\n",
+    "## 2.1. Drive Service 객체 생성\n",
     "***\n",
     "\n",
-    "fields에 들어가는 인자들은 <https://developers.google.com/drive/api/v3/reference/about>를 참조한다."
+    "drive_service의 Methods: <https://developers.google.com/resources/api-libraries/documentation/drive/v3/python/latest/?hl=ko>"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "drive_service = build(\"drive\", \"v3\", credentials=creds)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 2.2. Google Drive 정보얻기\n",
+    "***\n",
+    "\n",
+    "사용자 정보, 사용량 등을 알 수 있다.  \n",
+    "\n",
+    "참조: <https://developers.google.com/drive/api/v3/reference/about/get>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "{'kind': 'drive#about',\n",
-      " 'storageQuota': {'usage': '87125928048',\n",
-      "                  'usageInDrive': '87125928048',\n",
+      " 'storageQuota': {'usage': '989199205',\n",
+      "                  'usageInDrive': '989199205',\n",
       "                  'usageInDriveTrash': '5503'}}\n"
      ]
     }
    ],
    "source": [
-    "response = drive_service.about().get(fields=\"kind, storageQuota\").execute()\n",
+    "response = drive_service.about().get(fields=\"kind, storageQuota\").execute()  # 모든 정보를 보고 싶다면 fields=\"*\"를 사용한다.\n",
     "\n",
     "pprint.pprint(response)"
    ]
@@ -149,28 +173,29 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 2.2. 읽기\n",
+    "## 2.3. 읽기\n",
     "***\n",
     "\n",
     "\n",
-    "### 2.2.1. 특정 파일/폴더의 ID를 알아내기\n",
+    "### 2.3.1. 특정 파일/폴더의 ID를 알아내기\n",
     "***\n",
     "\n",
     "![파일/폴더의 ID 알아내기](https://raw.githubusercontent.com/3x3x3/MediaFiles/master/google_drive/get_file_id.gif)\n",
     "\n",
     "\n",
     "\n",
-    "### 2.2.2. 파일/폴더 검색\n",
+    "### 2.3.2. 파일/폴더 검색\n",
     "***\n",
     "\n",
-    "query를 이용하여 원하는 파일 또는 폴더를 검색할 수 있다.  \n",
-    "참조: <https://developers.google.com/drive/api/v3/search-parameters>  \n",
-    "다음은 특정 폴더에 있는 test1.txt라는 파일을 찾는 예제이다."
+    "query를 이용하여 원하는 파일 또는 폴더를 검색할 수 있다.   \n",
+    "다음은 특정 폴더에 있는 test1.txt라는 파일을 찾는 예제이다.  \n",
+    "\n",
+    "q에 들어가는 값은 <https://developers.google.com/drive/api/v3/search-parameters>를 참조"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -203,7 +228,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 2.2.3. Paging\n",
+    "### 2.3.3. Paging\n",
     "***\n",
     "폴더내의 목록을 불러올 때 기본적으로 100개까지 불러오게 되며, pageSize에 값을 줘서 한 번에 조회되는 개수를 조절할 수 있다. (1 ~ 1000개)  \n",
     "조회하려는 목록이 한 번에 조회되는 목록보다 많을 때는 Paging 처리를 해야 한다."
@@ -211,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -236,7 +261,7 @@
       "\n",
       "##### nextPageToken #####\n",
       "\n",
-      "~!!~AI9FV7T59la2smTVqJH4x-lqS0AOLqo5pY4tXG1PeRuKQMceOMFKU4LIxZfkBLIcyfxYMlxFjDReagWwhI_VYeP45ecbwGYk2IK7r7hPl92FXUDDMORy69ThlelKNRDIkB4vP01xcRPT2bZivEjptPvjHiESTHXfzkh5z4BaW3jzP1gafAdvA-hQVOjbuDlw433ZcY4QugsNR3AWvcfuhMX7AOmYjDKacZGXljQHdkj0_jeeSoLwph7JVKA1cLajBX43FYoUqQwXBZRJYdYi5I2hRDY8C2jiFVf9yH5eOsD3CiM1MbElkkOHMj0Y5dfluP_i9PYvhdncq7dD30UL_aqJSJ0zFCTKjGHBVqBGbZbjjG-PT5s1DsE=\n",
+      "~!!~AI9FV7S5VqiKETIZEDpR9dbC4ibrDxLayLpFdkyxtMfhkbd5_dmpc4zusmKD0i6vxZtqa5lm5wG63ZVTpKAhLmhx8GM5ygYYP6r0WPfsI93yWiielcccsGAXOg-fROqz7GHzx-xy7eyKya6OJ8OT1inJsj7m_GGSBCioSMmQNU_dpivY8OZ5HxIyYsX93s3YnJ8cfFSPv2DeYCrqNLDRVkOx4G3Q-GHvUWAm44ZHHUYaOcfphSBe_nacFthPnHrNNpRc8C0bA4dZAZOmS_PS5KoRRUGUwPOoawkGXaMvMDu1hd1mV9-a_jmzEZkhASOxU3AaX4o6QJ5oJjhohF_fm04rvYQOHwwB5mQeQ7iVPgAZvYwXFuI1TeQ=\n",
       "\n",
       "##### List of Metadata #####\n",
       "\n",
@@ -279,6 +304,7 @@
     "    page_token = response.get('nextPageToken', None)\n",
     "    print(page_token)\n",
     "\n",
+    "    # page_token이 None이라면 다음 조회할것이 없다라는 의미\n",
     "    if page_token is None:\n",
     "        break;"
    ]
@@ -287,15 +313,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 2.2.4. 폴더/파일의 ID를 이용하여 Metadata를 출력\n",
+    "### 2.3.4. 폴더/파일의 ID를 이용하여 Metadata를 출력\n",
     "***"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
@@ -305,11 +331,11 @@
       "\n",
       "##### File's MetaData #####\n",
       "\n",
-      "{'id': '1EFzqg-bfKXOjHP3q7NNUM6QYuEln8sR5',\n",
+      "{'id': '1Gh1Xdgp9FLFfsf_20Ou_V_mULhz9ZXk5',\n",
       " 'kind': 'drive#file',\n",
       " 'mimeType': 'text/plain',\n",
-      " 'name': 'Test.txt',\n",
-      " 'size': '10'}\n",
+      " 'name': 'test1.txt',\n",
+      " 'size': '3'}\n",
       "\n",
       "\n",
       "##### Folder's MetaData #####\n",
@@ -322,7 +348,7 @@
     }
    ],
    "source": [
-    "FILE_ID = \"1EFzqg-bfKXOjHP3q7NNUM6QYuEln8sR5\"  # 샘플로 읽어볼 파일의 ID\n",
+    "FILE_ID = \"1Gh1Xdgp9FLFfsf_20Ou_V_mULhz9ZXk5\"  # 샘플로 읽어볼 파일의 ID\n",
     "FOLDER_ID = \"1kBvzgj9MIuDLNqN0cVZhR-wDDfvbKXH4\"  # 샘플로 읽어볼 폴더의 ID\n",
     "\n",
     "# fields에 들어가는 인자는 다음 URL을 참조: https://developers.google.com/drive/api/v3/reference/files\n",
@@ -341,13 +367,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 2.2.5. Batch Requests\n",
-    "***"
+    "### 2.3.5. Batch Requests\n",
+    "***\n",
+    "\n",
+    "간단한 걸 반복적으로 처리할 때는 Batch Requests를 이용하여 처리하는 것이 효율적이다.  \n",
+    "다음은 3개의 File ID를 가지고 Meta Data를 출력 해보는 예제이다.\n",
+    "\n",
+    "참조: <https://developers.google.com/drive/api/v3/batch>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {
     "scrolled": true
    },
@@ -404,13 +435,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 2.2.6. 파일 다운로드\n",
+    "### 2.3.6. 파일 다운로드\n",
     "***"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {
     "scrolled": true
    },
@@ -427,14 +458,14 @@
       "\n",
       "##### Download Result #####\n",
       "\n",
-      "b'Test Body~'\n"
+      "b'aaa'\n"
      ]
     }
    ],
    "source": [
     "from googleapiclient.http import MediaIoBaseDownload\n",
     "\n",
-    "FILE_ID = \"1EFzqg-bfKXOjHP3q7NNUM6QYuEln8sR5\"  # 다운로드 받을 파일의 ID\n",
+    "FILE_ID = \"1Gh1Xdgp9FLFfsf_20Ou_V_mULhz9ZXk5\"  # 다운로드 받을 파일의 ID\n",
     "\n",
     "print(\"\\n##### Download Start #####\\n\")\n",
     "request = drive_service.files().get_media(fileId=FILE_ID)\n",
@@ -454,16 +485,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 2.3. 쓰기\n",
+    "## 2.4. 쓰기\n",
     "***\n",
     "\n",
-    "### 2.3.1. 파일을 읽어서 업로드\n",
-    "***"
+    "### 2.4.1. 파일을 읽어서 업로드\n",
+    "***\n",
+    "\n",
+    "큰 용량의 파일(5Mb이상)을 올릴때는 MediaFileUpload()에 resumable=True를 넣어주자."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -474,7 +507,7 @@
       "\n",
       "##### Upload Result #####\n",
       "\n",
-      "{'kind': 'drive#file', 'id': '1lEJXJ-5PynyzbmRZCROfLZB9B328NUd_', 'name': 'file_up_test.txt', 'mimeType': 'text/plain'}\n"
+      "{'kind': 'drive#file', 'id': '1-1eaC7w_3vaxDZrleLmp79_tGwHvwXqd', 'name': 'file_up_test.txt', 'mimeType': 'text/plain'}\n"
      ]
     }
    ],
@@ -499,13 +532,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 2.3.2. 메모리에 있는걸 업로드\n",
-    "***"
+    "### 2.4.2. 메모리에 있는걸 업로드\n",
+    "***\n",
+    "\n",
+    "큰 용량의 파일(5Mb이상)을 올릴때는 MediaIoBaseUpload()에 resumable=True를 넣어주자."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -516,7 +551,7 @@
       "\n",
       "##### Upload Result #####\n",
       "\n",
-      "{'kind': 'drive#file', 'id': '1vB8u3s75MvczXhtqxGJS7obKUTwp-aUD', 'name': 'mem_up_test.txt', 'mimeType': 'text/plain'}\n"
+      "{'kind': 'drive#file', 'id': '16cZLUqG-LmSdOm9VPZ8B4mu2mwAo5Ibi', 'name': 'mem_up_test.txt', 'mimeType': 'text/plain'}\n"
      ]
     }
    ],
@@ -547,13 +582,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 2.4. 수정\n",
-    "***"
+    "## 2.5. 수정\n",
+    "***\n",
+    "\n",
+    "update()를 하면 기존 걸 덮어 씌워버린다."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -563,7 +600,7 @@
       "\n",
       "##### Upload Result #####\n",
       "\n",
-      "{'kind': 'drive#file', 'id': '1vB8u3s75MvczXhtqxGJS7obKUTwp-aUD', 'name': 'mem_up_test2.txt', 'mimeType': 'text/plain'}\n"
+      "{'kind': 'drive#file', 'id': '16cZLUqG-LmSdOm9VPZ8B4mu2mwAo5Ibi', 'name': 'mem_up_test2.txt', 'mimeType': 'text/plain'}\n"
      ]
     }
    ],
@@ -592,13 +629,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 2.5. 삭제\n",
+    "## 2.6. 삭제\n",
     "***"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {
     "scrolled": true
    },
@@ -633,13 +670,15 @@
     "***\n",
     "\n",
     "\n",
-    "## 3.1. 사용할 데이터를 바이너리 형태로 업로드\n",
-    "***"
+    "## 3.1. 데이터 업로드\n",
+    "***\n",
+    "\n",
+    "간단하게 삼성전자의 열흘치 일봉 데이터를 Binary 형태로 업로드 해보자."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {
     "scrolled": false
    },
@@ -674,7 +713,7 @@
       "\n",
       "##### Upload Result #####\n",
       "\n",
-      "{'id': '1r1v17rYdEAPL0d0ISxJhtmJ8IETlDO5H',\n",
+      "{'id': '1Vq1LEZ19uJ1PSMk5OhF210L1kyWj3OwD',\n",
       " 'kind': 'drive#file',\n",
       " 'mimeType': 'application/octet-stream',\n",
       " 'name': 'day_005930.bry'}\n"
@@ -723,13 +762,15 @@
     "## 3.2. 데이터 다운로드\n",
     "***\n",
     "\n",
+    "위에서 올린 삼성전자의 Binary 데이터를 다운로드  \n",
+    "\n",
     "### 3.2.1 특정 지점부터 다운로드\n",
     "***"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -755,7 +796,7 @@
    "source": [
     "FILE_ID = response[\"id\"]  # 다운로드 받을 파일의 ID\n",
     "START_READING = 6  # 다운받기 시작할 Row Index\n",
-    "STRUCT_SIZE = 24\n",
+    "STRUCT_SIZE = 24  # 구조체의 크기\n",
     "\n",
     "print(\"\\n##### Download Start #####\\n\")\n",
     "request = drive_service.files().get_media(fileId=FILE_ID)\n",
@@ -785,12 +826,14 @@
    "metadata": {},
    "source": [
     "### 3.2.2. 스트리밍\n",
-    "***"
+    "***\n",
+    "\n",
+    "데이터를 일정 크기만큼 받으면서 처리"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {
     "scrolled": false
    },
@@ -838,8 +881,8 @@
     }
    ],
    "source": [
-    "STRUCT_SIZE = 24\n",
-    "CHUNK_SIZE = STRUCT_SIZE * 3\n",
+    "STRUCT_SIZE = 24  # 구조체의 크기\n",
+    "CHUNK_SIZE = STRUCT_SIZE * 3  # 한번에 받을 데이터의 크기\n",
     "\n",
     "\n",
     "class BufferHandler(io.BytesIO):\n",
@@ -884,6 +927,9 @@
    "source": [
     "# 4. Google Sheets\n",
     "***\n",
+    " \n",
+    "- Sheets API reference documentation: <https://developers.google.com/sheets/api/reference/rest/>\n",
+    "- Google Sheets API PyDoc documentation: <https://developers.google.com/resources/api-libraries/documentation/sheets/v4/python/latest/>\n",
     "\n",
     "\n",
     "## 4.1. Google Sheets API 사용설정\n",
@@ -893,14 +939,12 @@
     "\n",
     "\n",
     "## 4.2. Sheets Service 객체 생성\n",
-    "***\n",
-    "\n",
-    "생성되는 sheets_service는 <https://developers.google.com/resources/api-libraries/documentation/sheets/v4/python/latest/>를 참조한다."
+    "***"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -921,7 +965,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -980,7 +1024,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1087,7 +1131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {
     "scrolled": false
    },
@@ -1100,10 +1144,10 @@
       "\n",
       "##### Upload Result #####\n",
       "\n",
-      "{'id': '1NBjZgCzOcoI4OgqYEUhUV0seS5BL8RTKRYmb7em25nM',\n",
+      "{'id': '1FF-vhsVAZxHxu4lIYR4jA4ZJz7W3I6e0k6NiEe-D1yw',\n",
       " 'kind': 'drive#file',\n",
       " 'mimeType': 'application/vnd.google-apps.spreadsheet',\n",
-      " 'name': 'codetbl_20190412'}\n"
+      " 'name': 'codetbl_20190413'}\n"
      ]
     }
    ],
@@ -1137,7 +1181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1155,7 +1199,7 @@
       "\n",
       "##### Update Result #####\n",
       "\n",
-      "{'spreadsheetId': '1NBjZgCzOcoI4OgqYEUhUV0seS5BL8RTKRYmb7em25nM',\n",
+      "{'spreadsheetId': '1FF-vhsVAZxHxu4lIYR4jA4ZJz7W3I6e0k6NiEe-D1yw',\n",
       " 'updatedCells': 15,\n",
       " 'updatedColumns': 3,\n",
       " 'updatedRange': \"'시트1'!A1:C5\",\n",
@@ -1192,13 +1236,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 4.4.3. Append\n",
+    "### 4.4.3. 이어쓰기\n",
     "***"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1208,8 +1252,8 @@
       "\n",
       "##### Append Result #####\n",
       "\n",
-      "{'spreadsheetId': '1NBjZgCzOcoI4OgqYEUhUV0seS5BL8RTKRYmb7em25nM',\n",
-      " 'updates': {'spreadsheetId': '1NBjZgCzOcoI4OgqYEUhUV0seS5BL8RTKRYmb7em25nM',\n",
+      "{'spreadsheetId': '1FF-vhsVAZxHxu4lIYR4jA4ZJz7W3I6e0k6NiEe-D1yw',\n",
+      " 'updates': {'spreadsheetId': '1FF-vhsVAZxHxu4lIYR4jA4ZJz7W3I6e0k6NiEe-D1yw',\n",
       "             'updatedCells': 6,\n",
       "             'updatedColumns': 3,\n",
       "             'updatedRange': \"'시트1'!A6:C7\",\n",
@@ -1235,6 +1279,13 @@
     "print(\"\\n##### Append Result #####\\n\")\n",
     "pprint.pprint(response)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
